force-app/src/objects/c2g__ConsolidationSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings that control the behavior of Consolidations in Accounting.</description>
    <fields>
        <fullName>c2g__HierarchyRefProcessTransactionsLimit__c</fullName>
        <description>Defines the maximum number of transactions in an hierarchy reference process.</description>
        <inlineHelpText>Defines the maximum number of transactions in an hierarchy reference process.</inlineHelpText>
        <label>Hierarchy Process Transaction Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HierarchyReferenceProcessScopeSize__c</fullName>
        <description>Defines the scope size for the hierarchy reference process.</description>
        <inlineHelpText>Defines the scope size for the hierarchy reference process.</inlineHelpText>
        <label>Hierarchy Reference Process Scope Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ReportFilter__c</fullName>
        <description>Name of the filter configured on the consolidation report.</description>
        <inlineHelpText>Name of the filter configured on the consolidation report.</inlineHelpText>
        <label>Filter Configured on Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ReportId__c</fullName>
        <description>Contains the ID of the consolidation report. If blank, the consolidation report for the financial year of the ultimate parent company that contains the selected date on the Consolidation Group page is not displayed.</description>
        <inlineHelpText>If blank, the consolidation report for the financial year of the ultimate parent company that contains the selected date on the Consolidation Group page is not displayed.</inlineHelpText>
        <label>Consolidation Report ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Consolidation Settings</label>
</CustomObject>